--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -37,7 +37,7 @@
         android:id="@+id/buttonmap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Pick a location"
+        android:text="@string/button_location"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintHorizontal_bias="0.0"
