--- a/app/src/main/res/layout/activity_ticket_check.xml
+++ b/app/src/main/res/layout/activity_ticket_check.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TicketCheck">
+    tools:context=".activities.TicketCheck">
 
     <LinearLayout
         android:layout_width="match_parent"
