--- a/app/src/main/res/layout/activity_category_list.xml
+++ b/app/src/main/res/layout/activity_category_list.xml
@@ -32,7 +32,7 @@
         android:id="@+id/name_event"
         android:layout_width="94dp"
         android:layout_height="33dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="100dp"
         android:text=""
         app:layout_constraintBottom_toTopOf="@id/location_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,5 +47,24 @@
         app:layout_constraintBottom_toTopOf="@id/list_categorie"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/date_event"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/dateofevent"
+        app:layout_constraintBottom_toTopOf="@+id/location_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name_event" />
+
+    <TextView
+        android:id="@+id/date_values"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toEndOf="@+id/date_event"
+        app:layout_constraintTop_toBottomOf="@+id/name_event" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
