--- a/app/src/main/res/layout/add_category.xml
+++ b/app/src/main/res/layout/add_category.xml
@@ -12,6 +12,8 @@
         android:layout_height="29dp"
         android:layout_marginTop="36dp"
         android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="20sp"
         android:text="@string/create_category"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
