added loading spinner and ticket validation success message

--- a/app/src/main/res/layout/activity_ticket_creation.xml
+++ b/app/src/main/res/layout/activity_ticket_creation.xml
@@ -55,6 +55,16 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="@+id/cemail"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
+    <ProgressBar
+        android:id="@+id/progBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        style="?android:attr/progressBarStyleLarge"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/creerTicket">
+    </ProgressBar>
 
     <EditText
         android:id="@+id/cprenom"
