--- a/app/src/main/res/layout/activity_ticket_check.xml
+++ b/app/src/main/res/layout/activity_ticket_check.xml
@@ -119,4 +119,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etat" />
+    <ProgressBar
+        android:id="@+id/pBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        style="?android:attr/progressBarStyleLarge"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/valider">
+    </ProgressBar>
 </androidx.constraintlayout.widget.ConstraintLayout>
