--- a/app/src/main/res/layout/activity_qr_scanner.xml
+++ b/app/src/main/res/layout/activity_qr_scanner.xml
@@ -28,6 +28,6 @@
          android:layout_below="@id/scanner_view"
          android:layout_centerHorizontal="true"
          android:layout_margin="20dp"
-         android:text="Veuillez scanner le ticket"
+         android:text="@string/please_scan_qr"
          android:textColor="@color/black"/>
 </RelativeLayout>
