--- a/app/src/main/res/layout/activity_ticket_check.xml
+++ b/app/src/main/res/layout/activity_ticket_check.xml
@@ -18,7 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:text="Numéro du ticket"
+        android:text="@string/num_ticket"
         app:layout_constraintEnd_toStartOf="@+id/numero"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:id="@+id/numero"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="numero"
+        android:text="@string/num_ticket2"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        android:text="Catégorie"
+        android:text="@string/category"
         app:layout_constraintEnd_toStartOf="@+id/categorie"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
         android:id="@+id/categorie"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="categorie"
+        android:text="@string/category2"
         app:layout_constraintBottom_toBottomOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        android:text="CIN"
+        android:text="@string/cin"
         app:layout_constraintEnd_toStartOf="@+id/cin"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
         android:id="@+id/cin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="cin"
+        android:text="@string/cin2"
         app:layout_constraintBottom_toBottomOf="@+id/textView11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        android:text="Nom du propriétaire"
+        android:text="@string/owner_name"
         app:layout_constraintEnd_toStartOf="@+id/nom"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +94,7 @@
         android:id="@+id/nom"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="nom"
+        android:text="@string/owner_name2"
         app:layout_constraintBottom_toBottomOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -105,7 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="etat du ticket"
+        android:text="@string/ticket_state"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
@@ -115,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Valider le Ticket"
+        android:text="@string/validate_ticket"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etat" />
