--- a/app/src/main/res/layout/activity_category_list.xml
+++ b/app/src/main/res/layout/activity_category_list.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="16sp"
         android:contentDescription="TODO"
+        android:tint="@color/white"
         app:backgroundTint="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,6 +81,7 @@
         android:layout_marginEnd="5dp"
         android:background="@android:color/holo_red_dark"
         android:text="@string/show_location"
+        android:textColor="@color/white"
         android:textSize="8sp"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
